[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/guySS.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Pistol.png" type="Texture" id=3]
[ext_resource path="res://Player/Weapons/Pistol.gd" type="Script" id=4]
[ext_resource path="res://Player/Weapon.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sounds/pistol.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/MuzzleFlare.png" type="Texture" id=7]
[ext_resource path="res://Effects/ShakeCam.gd" type="Script" id=8]
[ext_resource path="res://HitBoxes/Hurtbox.tscn" type="PackedScene" id=9]
[ext_resource path="res://Enemies/Stats.tscn" type="PackedScene" id=10]
[ext_resource path="res://Effects/FlashWhite.shader" type="Shader" id=11]
[ext_resource path="res://Effects/BlinkAnimationPlayer.tscn" type="PackedScene" id=12]

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = ExtResource( 11 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.52633
height = 5.60371

[sub_resource type="Animation" id=2]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Run"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=4]
resource_name = "recoil"

[sub_resource type="CapsuleShape2D" id=5]
radius = 7.9375
height = 4.25

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 6 )
texture = ExtResource( 1 )
vframes = 3
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5.086 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="PlayerCamOld" type="Camera2D" parent="."]

[node name="PlayerCam" type="Camera2D" parent="."]
current = true
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="PlayerCam"]

[node name="Tween" type="Tween" parent="PlayerCam"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Run = SubResource( 3 )

[node name="Weapon" type="Position2D" parent="."]
position = Vector2( 0, -3.253 )
script = ExtResource( 5 )

[node name="Pistol" type="Node2D" parent="Weapon"]
script = ExtResource( 4 )

[node name="MuzzleFlareSprite" type="Sprite" parent="Weapon/Pistol"]
visible = false
position = Vector2( 19.5742, 0.822557 )
texture = ExtResource( 7 )

[node name="Timer" type="Timer" parent="Weapon/Pistol/MuzzleFlareSprite"]
wait_time = 0.01

[node name="Pistol" type="Sprite" parent="Weapon/Pistol"]
position = Vector2( 13.3369, 0.99224 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Weapon/Pistol"]
anims/recoil = SubResource( 4 )

[node name="Firepoint" type="Position2D" parent="Weapon/Pistol"]
position = Vector2( 23.7517, 1.961 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Weapon/Pistol"]
stream = ExtResource( 6 )
volume_db = -17.377

[node name="GunPitchTimer" type="Timer" parent="Weapon/Pistol"]
wait_time = 0.3

[node name="Hurtbox" parent="." instance=ExtResource( 9 )]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 5 )

[node name="Stats" parent="." instance=ExtResource( 10 )]

[node name="BlinkAnimationPlayer" parent="." instance=ExtResource( 12 )]
[connection signal="timeout" from="PlayerCam/Timer" to="PlayerCam" method="_on_Timer_timeout"]
[connection signal="timeout" from="Weapon/Pistol/MuzzleFlareSprite/Timer" to="Weapon/Pistol" method="_on_Timer_timeout"]
[connection signal="timeout" from="Weapon/Pistol/GunPitchTimer" to="Weapon/Pistol" method="_on_GunPitchTimer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
